--- a/requirements.txt
+++ b/requirements.txt
@@ -5,20 +5,26 @@ Jinja2==3.1.6
 Mako==1.3.9
 MarkupSafe==3.0.2
 PyJWT==2.10.1
+PyMySQL==1.1.1
 PyPDF2==3.0.1
 SQLAlchemy==2.0.40
 Werkzeug==3.1.3
 alembic==1.15.2
 blinker==1.9.0
 certifi==2025.1.31
+cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.8
 cloudinary==1.43.0
+cryptography==44.0.2
 flask-cors==5.0.1
 idna==3.10
 itsdangerous==2.2.0
+marshmallow==3.26.1
+packaging==24.2
 pillow==11.1.0
+pycparser==2.22
 python-dotenv==1.1.0
 reportlab==4.3.1
 requests==2.32.3
