--- a/requirements.txt
+++ b/requirements.txt
@@ -31,3 +31,9 @@ requests==2.32.3
 six==1.17.0
 typing_extensions==4.13.1
 urllib3==2.3.0
+
+# Test dependencies
+pytest==8.0.0
+pytest-cov==4.1.0
+pytest-flask==1.3.0
+coverage==7.4.0
